Finalize README for v1.0.0 release